--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "typescript-action",
-  "version": "0.0.0",
+  "name": "setup-ossutil",
+  "version": "0.1.0",
   "private": true,
-  "description": "TypeScript template action",
-  "main": "lib/main.js",
+  "description": "setup ossutil action",
+  "main": "lib/setup-ossutil.js",
   "scripts": {
     "build": "tsc",
     "format": "prettier --write **/*.ts",
@@ -15,17 +15,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/yizhoumo/setup-ossutil.git"
   },
   "keywords": [
     "actions",
-    "node",
+    "ossutil",
     "setup"
   ],
-  "author": "YourNameOrOrganization",
+  "author": "Rimo",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.0"
+    "@actions/core": "^1.2.0",
+    "@actions/tool-cache": "^1.3.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
