Use a different name for Marketplace

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Setup OSSUTIL'
+name: 'Setup OSSUTIL environment'
 description: 'Download and config Alibaba Cloud OSSUTIL'
 author: 'Rimo'
 inputs:
