--- a/action.yml
+++ b/action.yml
@@ -5,7 +5,7 @@ inputs:
   ossutil-version:
     description: 'The OSSUTIL version to download and use'
     required: false
-    default: '1.7.0'
+    default: 'latest'
   endpoint:
     description: 'The endpoint of your bucket'
     required: true
@@ -19,7 +19,7 @@ inputs:
     description: 'The STS Token of the credentials'
     required: false
 runs:
-  using: 'node12'
+  using: 'node16'
   main: 'dist/index.js'
 branding:
   icon: 'download-cloud'
