--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,8 @@ on: # rebuild any PRs and main branch changes
   push:
     branches:
       - master
+  schedule:
+    - cron: '0 0 * * *'
 
 jobs:
   build: # make sure build/ci work properly
@@ -36,6 +38,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: ./
       with:
+        ossutil-version: 'latest'
         endpoint: ${{ secrets.OSS_ENDPOINT }}
         access-key-id: ${{ secrets.OSS_ACCESS_KEY_ID }}
         access-key-secret: ${{ secrets.OSS_ACCESS_KEY_SECRET }}
