--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "setup-ossutil",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "private": true,
   "description": "setup ossutil action",
   "main": "lib/setup-ossutil.js",
@@ -26,6 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.6.0",
+    "@actions/github": "^5.1.0",
     "@actions/tool-cache": "^2.0.1"
   },
   "devDependencies": {
