--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,34 +1,13 @@
-name: "build-test"
-on: # rebuild any PRs and main branch changes
+name: "test"
+on:
   pull_request:
+    branches: [ "master" ]
   push:
-    branches:
-      - master
+    branches: [ "master" ]
   schedule:
     - cron: '0 0 * * *'
 
 jobs:
-  build: # make sure build/ci work properly
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - run: npm ci
-    - run: npm run all
-    - name: Compare the expected and actual dist
-      run: |
-        if [ "$(git diff --ignore-space-at-eol dist/ | wc -l)" -gt "0" ]; then
-          echo "Detected uncommitted changes after build.  See status below:"
-          git diff
-          exit 1
-        fi
-      id: diff
-    - name: upload the expected dist
-      uses: actions/upload-artifact@v3
-      if: ${{ failure() && steps.diff.conclusion == 'failure' }}
-      with:
-        name: dist
-        path: dist/
-
   test: # make sure the action works on a clean machine without building
     strategy:
       matrix:
