--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        version: [1.7.0, 1.7.14, latest]
+        version: [1.7.15, latest]
     runs-on: ${{ matrix.os }}
 
     steps:
