--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -23,6 +23,17 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup Node.js
+        id: setup-node
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: .node-version
+          cache: npm
+
+      - name: Install Dependencies
+        id: npm-ci
+        run: npm ci
+
       - name: Lint Codebase
         id: super-linter
         uses: super-linter/super-linter/slim@v6
