--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -62,3 +62,17 @@ jobs:
         with:
           name: dist
           path: dist/
+
+  push-dist:
+    name: Push dist/
+    needs: check-dist
+    if: ${{ failure() }}
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+      - uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          file_pattern: dist
