--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -72,7 +72,12 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/download-artifact@v4
-      - uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          file_pattern: dist
+          ref: ${{ github.head_ref }}
+      - uses: actions/download-artifact@v4
+      - run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add dist
+          git commit -m "Generate dist"
+          git push
