--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -62,3 +62,22 @@ jobs:
         with:
           name: dist
           path: dist/
+
+  push-dist:
+    name: Push dist/
+    needs: check-dist
+    if: ${{ failure() }}
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
+      - uses: actions/download-artifact@v4
+      - run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add dist
+          git commit -m "Generate dist"
+          git push
